--- a/details.html
+++ b/details.html
@@ -24,6 +24,8 @@
 	<style amp-custom>
       body {
         /*animation:none 0s ease 0s 1 normal none running;*/
+        background-color:#e5ecf0;
+        /*background-color:#d9e4e9;*/
       }
 	  ul {
 	  list-style-type: none;
@@ -58,9 +60,9 @@
 
 	p {
 		margin: 0;
-	}
-	
-	[data-lang="ar"]{
+		color:#303030;}
+
+    [data-lang="ar"]{
 	/*font-family: Ayah;*/
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -78,8 +80,8 @@
 	color: #20b2aa;
 	}
 	
-	
-    </style>
+
+	</style>
 	
 
 <head>
