--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	<style amp-custom>
       body {
         /*animation:none 0s ease 0s 1 normal none running;*/
+        background-color:#e5ecf0;
+        /*background-color:#d9e4e9;*/
       }
 	  ul {
 	  list-style-type: none;
@@ -58,6 +60,7 @@
 
 	p {
 		margin: 0;
+		color:#303030;
 	}
     </style>
 <head>
